source/renderer/app/components/staking/stake-pools/StakePoolThumbnail.scss
.component {
  position: relative;
  > button {
    background: transparent;
    border: none;
    cursor: pointer;
    height: 100%;
    position: absolute;
    width: 100%;
    z-index: 1;
  }
}

.content {
  background-color: var(--theme-staking-stake-pool-background-color);
  border: solid 1px var(--theme-staking-stake-pool-border-color);
  border-radius: 4px;
  cursor: pointer;
  height: 71px;
  padding: 9px 0 0;
  width: 80px;

  &.disabled {
    opacity: 0.3;
  }

  &.isOnHover:hover {
    @extend .isHighlighted;
  }

  &.hideSaturation {
    padding-top: 14px;

    .checkmarkWrapper {
      margin-top: 5px;
    }
  }
}

.isHighlighted {
  box-shadow: 0 0 4px 2px var(--theme-staking-stake-pool-glow-color);
}

.ticker {
  color: var(--theme-staking-stake-pool-ticker-color);
  font-family: var(--font-semibold);
  font-size: 14px;
  letter-spacing: -0.5px;
  line-height: 1;
  margin: 0 0 1px;
  text-align: center;
}

.ranking {
  font-size: 20px;
  font-weight: bold;
  text-align: center;
}

.saturationBar {
  background: var(--theme-staking-stake-pool-saturation-background-color);
  border-radius: 2px;
  height: 5px;
  margin: 2px auto 0;
  overflow: hidden;
  position: relative;
  width: 40px;

  span {
    border-radius: 2px;
    bottom: 0;
    height: inherit;
    left: 0;
    position: absolute;
    top: 0;
  }

  &.green span {
    background: var(--theme-staking-stake-pool-saturation-green-color);
  }

  &.orange span {
    background: var(--theme-staking-stake-pool-saturation-orange-color);
  }

  &.red span {
    background: var(--theme-staking-stake-pool-saturation-red-color);
  }

  &.yellow span {
    background: var(--theme-staking-stake-pool-saturation-yellow-color);
  }
}

.checkmarkWrapper {
  margin-top: 10px;
  text-align: center;
  .checkmarkImage {
    svg {
      width: 15.5px;
      path {
        stroke: var(--theme-staking-stake-pool-selected-checkmark-icon-color);
      }
    }
  }
}

.clock {
  background: var(--theme-staking-stake-pool-retirement-background-color);
  border-radius: 0 2px 0 4px;
  height: 18px;
  position: absolute;
  right: 0;
  top: 0;
  width: 18px;
}

.clockIcon {
  display: block;
  line-height: 0;
  margin: 1px 0 0;
  padding: 0;
  text-align: center;

  svg {
    height: 15px;
    width: 15px;
  }
}

.colorBand {
  border-radius: 0 0 4px 4px;
  bottom: 0;
  display: block;
  height: 5px;
  left: 0;
  position: absolute;
  width: 100%;
}

.isSelected,
.isNextSelected {
  .colorBand,
  .ranking {
    visibility: hidden;
  }
  .ticker {
    color: var(--theme-staking-stake-pool-selected-ticker-color);
  }
}

